--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <style>
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -156,7 +155,7 @@
       </div>
 
       <div class="item">
-        <img src="imagem/12.jpg" alt="Chicago" width="1200" height="700">
+        <img src="imagem/12.jpg" alt="Mogi das Cruzes" width="1200" height="700">
         <div class="carousel-caption">
           <h3 style="color: #FFD700;">Mogi das Cruzes</h3>
           <p>Cigarra</p>
@@ -164,7 +163,7 @@
       </div>
     
       <div class="item">
-        <img src="imagem/13.jpg" alt="Los Angeles" width="1200" height="700">
+        <img src="imagem/13.jpg" alt="Horto Florestal de Rio Claro" width="1200" height="700">
         <div class="carousel-caption">
           <h3 style="color: #FFD700;">Horto Florestal de Rio Claro</h3>
           <p>Vitória regias</p>
