--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
       </div>
 
       <div class="item">
-        <img src="imagem/12.jpg" alt="Mogi das Cruzes" width="1200" height="700">
+        <img src="imagem/15.jpg" alt="Mogi das Cruzes" width="1200" height="700" >
         <div class="carousel-caption">
-          <h3 style="color: #FFD700;">Mogi das Cruzes</h3>
-          <p>Cigarra</p>
+          <h3 style="color: #FFD700;">Rio Claro</h3>
+          <p>Cisterna</p>
         </div>      
       </div>
     
