--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
+		<li class="dropdown">
+            <a class="dropdown-toggle" href="#" data-toggle="dropdown">Resume<strong class="caret"></strong></a>
+           <ul class="dropdown-menu">
+            <li><a href="resume/Osvaldo-Shiraishi-curriculo-pt.pdf">Portuguese</a></li>
+            <li><a href="resume/Osvaldo-Shiraishi-curriculo-en.pdf">English</a></li>            
+          </ul>			
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
 		<li class="dropdown">
