--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
   .white{
   color: #000;
   }  
-  .container {
-      padding: 80px 120px;
-  }
   .navbar {
       font-family: Montserrat, sans-serif;
       font-size: 11px !important;
@@ -39,16 +36,6 @@
    
   .navbar-default .navbar-toggle {
       border-color: transparent;
-  }
-  .open .dropdown-toggle {
-      color: #fff;
-      background-color: #E7E7E7 !important;
-  }
-  .dropdown-menu li a {
-      color: #000 !important;
-  }
-  .dropdown-menu li a:hover {
-      background-color: red !important;
   }
   footer {
       background-color: #E7E7E7;
@@ -87,7 +74,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="="pull-left" href="#myPage"><img src="imagem/logo.png" alt="Logo" style="width:140px; height: 50px;" /></a>
+      <a class="pull-left" href="#myPage"><img src="imagem/logo.png" alt="Logo" style="width:140px; height: 50px;" /></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -98,8 +85,8 @@
 		<li class="dropdown">
             <a class="dropdown-toggle" href="#" data-toggle="dropdown">Resume<strong class="caret"></strong></a>
            <ul class="dropdown-menu">
-            <li><a href="resume/Osvaldo-Shiraishi-curriculo-pt.pdf">Portuguese</a></li>
-            <li><a href="resume/Osvaldo-Shiraishi-curriculo-en.pdf">English</a></li>            
+            <li><a onclick="javascript: window.open('resume/osvaldo-shiraishi-curriculo-pt.pdf','_blank')">Portuguese</a></li>
+            <li><a onclick="javascript: window.open('resume/osvaldo-shiraishi-curriculo-en.pdf','_blank')">English</a></li>            
           </ul>			
         </li>
       </ul>
